# Game-Life

./: CMakeLists.txt  README.md  main.cpp  main_shader.fs
SFML/debug/lib/manual-link/: sfml-main-d.lib
SFML/lib/manual-link/: sfml-main.lib
SFML/share/brotli/: vcpkg.spdx.json  vcpkg_abi_info.txt
SFML/share/bzip2/: vcpkg.spdx.json  vcpkg_abi_info.txt
SFML/share/egl-registry/: vcpkg.spdx.json  vcpkg_abi_info.txt
SFML/share/freetype/: vcpkg.spdx.json  vcpkg_abi_info.txt
SFML/share/libflac/: vcpkg.spdx.json  vcpkg_abi_info.txt
SFML/share/libogg/: vcpkg.spdx.json  vcpkg_abi_info.txt
SFML/share/libpng/: vcpkg.spdx.json  vcpkg_abi_info.txt
SFML/share/libvorbis/: vcpkg.spdx.json  vcpkg_abi_info.txt
SFML/share/openal-soft/: vcpkg.spdx.json  vcpkg_abi_info.txt
SFML/share/opengl/: vcpkg.spdx.json  vcpkg_abi_info.txt
SFML/share/opengl-registry/: vcpkg.spdx.json  vcpkg_abi_info.txt
SFML/share/sfml/: vcpkg.spdx.json  vcpkg_abi_info.txt
SFML/share/stb/: vcpkg.spdx.json  vcpkg_abi_info.txt
SFML/share/vcpkg-cmake/: vcpkg.spdx.json  vcpkg_abi_info.txt
SFML/share/vcpkg-cmake-config/: vcpkg.spdx.json  vcpkg_abi_info.txt
SFML/share/zlib/: vcpkg.spdx.json  vcpkg_abi_info.txt
